# sprocket

./: .gitignore  Cargo.toml  LICENSE  README.md  ecs.md  plans.yml  todo.yml
sandbox/: Cargo.toml  build.rs
sandbox/data/materials/: default.json
sandbox/data/models/: suzanne.dae
sandbox/data/pipelines/: default.json
sandbox/data/renderpasses/: default.json
sandbox/data/shaders/: default.frag  default.vert
sandbox/src/: main.rs
sprocket/: Cargo.toml  build.rs
sprocket/src/: application.rs  event.rs  lib.rs  logger.rs  macros.rs  time.rs  timer.rs  utils.rs
sprocket/src/ecs/: component.rs  component_array.rs  component_manager.rs  entity.rs  mod.rs
sprocket/src/graphics/: error.rs  glfw.rs  mod.rs  vulkan.rs  window.rs
sprocket/src/graphics/vulkan/: buffer.rs  commandbuffer.rs  descriptors.rs  enums.rs  framebuffer.rs  indexbuffer.rs  material.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  renderer.rs  renderpass.rs  resources.rs  sampler.rs  swapchain.rs  texture.rs  uniformbuffer.rs  vertexbuffer.rs
sprocket/src/math/: mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
sprocket/src/physics/: mod.rs  transform.rs
sprocket/src/systems/: mod.rs
