[package]
name = "sprocket"
version = "0.1.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
colorful = "0.2.1"
# For converting integers to enums
num-traits = "0.2"
num-derive = "0.2"