[package]
name = "sprocket"
version = "0.1.4"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging and colored terminal output
log = "0.4.8"
colorful = "0.2.1"

# For converting integers to enums
num-traits = "0.2"
num-derive = "0.2"

# Vulkan wrapper
ash = "0.31.0"

# Better io errors
ex = "0.1.3"

# Vulkan memory allocator
vk-mem = "0.2.2"

# XML parsing
simple-xml = "0.1.10"

# JSON parsing
serde_json = "1.0.57"

# Serializing and Deserializing
serde = { version = "1.0.115", features = ["derive"] }
[build-dependencies]
cc = "1.0"
